fix bug transaction-message overflow

--- a/src/app/pages/transaction/transaction-detail/transaction-messages/transaction-messages.component.scss
+++ b/src/app/pages/transaction/transaction-detail/transaction-messages/transaction-messages.component.scss
@@ -69,10 +69,3 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
-.content-byte-code{
-  max-width: 90%;
-  @media (min-width: 992px) {
-    max-width: 95%;
-  }
-}
